# DeepLearningExamples

./: .dockerignore  .gitignore  .gitmodules  Colab_Jasper_TRT_inference_demo.ipynb  Dockerfile  INSTALL.md  Pipfile  README.md  benchmarks.py  benchmarks.yml  hubconf.py  multiproc.py  requirements.txt  train.py
.github/: FUNDING.yml
FasterTransformer/fastertransformer/cuda/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels.h  multi_head_attention.h  open_attention.cu  open_attention.h
FasterTransformer/fastertransformer/tf_op/: CMakeLists.txt  bert_transformer_op.cc  bert_transformer_op.cu.cc
FasterTransformer/v1/sample/cpp/: CMakeLists.txt  transformer_fp16.cc  transformer_fp32.cc
FasterTransformer/v2/: .gitignore  .gitmodules  CMakeLists.txt  README.md
FasterTransformer/v2.1/: CMakeLists.txt  README.md
FasterTransformer/v2.1/fastertransformer/: allocator.h  arguments.h  bert_encoder_transformer.h  common.h
FasterTransformer/v2.1/fastertransformer/cuda/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels.h  decoding_kernel_check.cpp  decoding_kernels.cu  multi_head_attention.h  online_softmax_beamsearch_kernels.cu  open_attention.cu  open_attention.h  open_decoder.cu  topk_kernels.cuh
FasterTransformer/v2.1/fastertransformer/tf_op/: CMakeLists.txt  bert_transformer_op.cc  common_op.h  tf_traits.h
FasterTransformer/v2.1/fastertransformer/th_op/: CMakeLists.txt  decoder_ext.h  decoding_ths_op.cc  encoder_ext.h  encoder_ths_op.cc  encoder_ths_op_f.h  ft_ext.cc  ft_ths_op.cc  th_traits.h
FasterTransformer/v2.1/fastertransformer/trt_plugin/: bert_transformer_plugin.h  trt_model.h
FasterTransformer/v2.1/sample/cpp/: decoding_sampling_sample.cc  encoder_sample.cc
FasterTransformer/v2.1/sample/pytorch/: decoder_sample.py  decoding_sample.py
FasterTransformer/v2.1/sample/pytorch/scripts/: profile_decoder_decoding.sh  profile_encoder.sh  run_mrpc.sh  run_squad.sh
FasterTransformer/v2.1/sample/pytorch/utils/: __init__.py  encoder.py  recover_bpe.py  translation_model.py
FasterTransformer/v2.1/sample/tensorRT/: CMakeLists.txt
FasterTransformer/v2.1/sample/tensorflow/: decoder_sample.py  decoding_sample.py  encoder_decoding_sample.py  encoder_sample.py  translate_sample.py
FasterTransformer/v2.1/sample/tensorflow/scripts/: profile_decoder_performance.sh  profile_effective_transformer_performance.sh  profile_encoder_performance.sh
FasterTransformer/v2.1/sample/tensorflow/unit_test/: beam_search_unit_test.py  sampling_unit_test.py
FasterTransformer/v2.1/sample/tensorflow/utils/: bleu_score.py  common.py  decoding.py  dump_model.py  encoder.py  position.py  sampling.py
FasterTransformer/v2.1/sample/tensorflow/utils/translation/: download_model_data.sh  test.de  test.en  wmtende.vocab
FasterTransformer/v2.1/sample/tensorflow_bert/: ckpt_type_convert.py  fast_infer_util.py  my_modeling.py  profile_bert_inference.py  profile_transformer_inference.py  run_classifier_wrap.py  run_squad_wrap.py  squad_evaluate-v1.1.py
FasterTransformer/v2.1/tools/gemm_test/: common.h  decoding_gemm.cc  encoder_gemm.cc  encoder_gemm.h
FasterTransformer/v2/fastertransformer/: CMakeLists.txt  allocator.h  beamsearch_opennmt.h  bert_encoder_transformer.h  common.h  common_structure.h  decoding_opennmt.h  open_decoder.h  utils.h
FasterTransformer/v2/fastertransformer/cuda/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels.h  decoding_kernel_check.cpp  decoding_kernel_check.h  multi_head_attention.h  open_attention.cu  open_attention.h  open_decoder.cu
FasterTransformer/v2/fastertransformer/tf_op/: CMakeLists.txt  bert_transformer_op.cc  bert_transformer_op.cu.cc  bert_transformer_op.h  common_op.h  decoder_op.cc  decoder_op.cu.cc  decoder_op.h  decoding_op.cc  decoding_op.cu.cc  decoding_op.h
FasterTransformer/v2/fastertransformer/trt_plugin/: bert_transformer_plugin.h  trt_model.h
FasterTransformer/v2/sample/cpp/: CMakeLists.txt  decoding_sample.cc  encoder_sample.cc
FasterTransformer/v2/sample/tensorRT/: CMakeLists.txt  transformer_trt.cc
FasterTransformer/v2/sample/tensorflow/: decoder_sample.py  decoding_sample.py  encoder_decoder_sample.py  encoder_decoding_sample.py  encoder_sample.py  translate_sample.py
FasterTransformer/v2/sample/tensorflow/scripts/: profile_decoder_op_performance.sh  profile_decoding_op_performance.sh
FasterTransformer/v2/sample/tensorflow/utils/: common.py  decoder.py  decoding.py  dump_model.py  encoder.py  position.py  reducer.py
FasterTransformer/v2/sample/tensorflow_bert/: fast_infer_util.py  my_modeling.py  profile_bert_inference.py  profile_transformer_inference.py  profile_util.py  run_classifier_wrap.py  sample.md
FasterTransformer/v2/tools/gemm_test/: CMakeLists.txt  decoding_gemm.h  encoder_gemm.cc  encoder_gemm.h
FasterTransformer/v3.0/sample/cpp/: CMakeLists.txt  decoding_beamsearch_sample.cc  encoder_sample.cc
FasterTransformer/v3.1/fastertransformer/gemm_test/: CMakeLists.txt  encoder_gemm_func.cc  encoder_gemm_func.h  encoder_igemm_func.cc  encoder_igemm_func.h
Kaldi/SpeechRecognition/kaldi-asr-backend/: CMakeLists.txt  kaldi-backend-utils.cc  kaldi-backend-utils.h  triton-kaldi-backend.cc
Kaldi/SpeechRecognition/kaldi-asr-client/: CMakeLists.txt  asr_client_imp.cc  asr_client_imp.h  kaldi_asr_parallel_client.cc
PyTorch/SpeechSynthesis/Tacotron2/trtis_cpp/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.export_weights  Dockerfile.trtis  README.md  build_trtis.sh  configure  export_weights.sh  run_trtis_server.sh
PyTorch/SpeechSynthesis/Tacotron2/trtis_cpp/scripts/: build_benchmark_engines.sh  build_engines.sh  denoiser_to_json.py  export_symbols.py  tacotron2_to_json.py  waveglow_to_onnx.py
PyTorch/SpeechSynthesis/Tacotron2/trtis_cpp/src/: CMakeLists.txt
PyTorch/SpeechSynthesis/Tacotron2/trtis_cpp/trtis_client/: CMakeLists.txt  Dockerfile.trtis_client  build_trtis_client.sh  configure  phrases.txt  run_trtis_benchmark_client.sh  run_trtis_client.sh
Tools/PyTorch/TimeSeriesPredictionPlatform/hydra_plugins/hydra_optuna_sweeper/: MANIFEST.in  NEWS.md  README.md  pyproject.toml  setup.py
(+18482 files in other folders)
